Russian localization corrections

--- a/lang/ru.json
+++ b/lang/ru.json
@@ -181,23 +181,23 @@
 			}
 		},
 		"attack_rating": {
-			"astral": "Знач. астр. атаки",
-			"matrix": "Знач. матр. атаки",
-			"physical": "Знач. физ. атаки",
-			"social": "Знач. соц. атаки",
-			"vehicle": "Знач. транс. атаки"
+			"astral": "Значение астральной атаки",
+			"matrix": "Значение атаки в Матрице",
+			"physical": "Значение физической атаки",
+			"social": "Значение атаки в общении",
+			"vehicle": "Значение атаки транспорта"
 		},
 		"combat": {
-			"togglePhysical": "Исп. физ. инициативу",
-			"toggleMatrix": "Исп. матр. инициативу",
-			"toggleAstral": "Исп. астр. инициативу"
+			"togglePhysical": "Использовать обычную инициативу",
+			"toggleMatrix": "Использовать инициативу в Матрице",
+			"toggleAstral": "Использовать инициативу в астрале"
 		},
 		"complexform": {
 			"duration": "Длительность",
 			"fading": "Значение угасания",
 			"none": "Нет",
-			"oppAttr1": "Противостоящ. хар. 1",
-			"oppAttr2": "Противостоящ. хар. 2",
+			"oppAttr1": "Встречная характеристика 1",
+			"oppAttr2": "Встречная характеристика 2",
 			"skill": "Характеристика",
 			"threshold": "Порог"
 		},
@@ -216,21 +216,21 @@
 			"astral": "Защита: бой в астрале",
 			"drain": "Сопротивление истощению",
 			"fading": "Сопротивление угасанию",
-			"damage_astral": "Сопротивление астр. урону",
-			"damage_physical": "Сопротивление физ. урону",
+			"damage_astral": "Сопротивление астральному урону",
+			"damage_physical": "Сопротивление физическому урону",
 			"physical": "Защита: Атаки",
-			"spells_direct": "Защита: Заклинания пр. дей.",
-			"spells_indirect": "Защита: Заклинания кос. дей.",
-			"spells_other": "Защита: Проч. заклинания",
+			"spells_direct": "Защита: Заклинания пр. действия",
+			"spells_indirect": "Защита: Заклинания кос. действия",
+			"spells_other": "Защита: Прочие заклинания",
 			"toxin": "Сопротивление токсинам"
 		},
 		"defense_rating": {
 			"label": "Значение защиты",
-			"astral": "Знач. астр. защиты",
-			"matrix": "Знач. матр. защиты",
-			"physical": "Знач. физ. защиты",
-			"social": "Знач. соц. защиты",
-			"vehicle": "Знач. транс. защиты"
+			"astral": "Значение астральной защиты",
+			"matrix": "Значение защиты в Матрице",
+			"physical": "Значение физической защиты",
+			"social": "Значение защиты в общении",
+			"vehicle": "Значение защиты транспорта"
 		},
 		"derived": {
 			"composure": "Самообладание",
@@ -508,12 +508,12 @@
 			"accessories": "Аксессуары/Модификации",
 			"strWeapon": "Использует Силу",
 			"ammunition": "Боезапас",
-			"attackvalues": "Знач. атаки",
+			"attackvalues": "Значение атаки",
 			"availability": "Доступ.",
 			"capacity": "Ёмкость",
 			"category": "Категория ",
 			"damage": "Сила урона",
-			"defencerating": "Знач. защиты",
+			"defencerating": "Значение защиты",
 			"description": "Описание",
 			"essence": "Сущность",
 			"feature": "Особенности",
@@ -543,7 +543,7 @@
 			"mode_fa_4m": "Радиус 4 м",
 			"mode_fa_5m": "Радиус 5 м",
 			"mode_fa_6m": "Радиус 6 м",
-			"natural": "Ест. броня",
+			"natural": "Естественная броня",
 			"physical_damage": "Ф",
 			"physical_special_damage": "О",
 			"price": "Стоимость",
@@ -661,13 +661,13 @@
 			"pool": "Набор",
 			"poolmod": "Модификатор набора",
 			"programs.short": "П",
-			"progSlots": "Ячейки прог.",
+			"progSlots": "Ячейки программ",
 			"rating": "Рейтинг",
 			"rating1": "Рейтинг 1",
 			"rating2": "Рейтинг 2",
 			"rating3": "Рейтинг 3",
 			"slower": "Затормозить",
-			"soak": "сопротивление",
+			"soak": "Сопротивление",
 			"soaked": "Выдержано {soaked} из {threshold} урона",
 			"specialization": "Специализация",
 			"speed_detail": "Вы двигаетесь со скоростью {speed} км/ч ({speedPerTurn} метров в ход). Маш модификатор проверок равен {modifier}.",
@@ -1228,7 +1228,7 @@
 					"action": "Действие",
 					"defense": "ЗЗ",
 					"name": "Название",
-					"social": "Социальное"
+					"social": "Общение"
 				},
 				"title": "Броня"
 			},
@@ -1560,17 +1560,17 @@
 			"outdoors": {
 				"navigation": "Навигация",
 				"survival": "Выживание",
-				"tracking_desert": "Окружение — Пустыня",
-				"tracking_other": "Окружение — Другое",
-				"tracking_urban": "Окружение — Город",
-				"tracking_woods": "Окружение — Лес"
+				"tracking_desert": "Окружение: Пустыня",
+				"tracking_other": "Окружение: Другое",
+				"tracking_urban": "Окружение: Город",
+				"tracking_woods": "Окружение: Лес"
 			},
 			"perception": {
 				"aural": "Слух",
-				"perception_desert": "Окружение — Пустыня",
-				"perception_other": "Окружение — Другое",
-				"perception_urban": "Окружение — Город",
-				"perception_woods": "Окружение — Лес",
+				"perception_desert": "Окружение: Пустыня",
+				"perception_other": "Окружение: Другое",
+				"perception_urban": "Окружение: Город",
+				"perception_woods": "Окружение: Лес",
 				"scent": "Обоняние",
 				"tactile": "Осязание",
 				"taste": "Вкус",
@@ -1931,8 +1931,8 @@
 			"defensepool.spells_indirect.mod": "Модификатор набора кубиков защиты от заклинаний косвенного действия",
 			"defensepool.toxin.mod": "Модификатор набора кубиков сопротивления токсинам",
 			"defensepool.drain.mod": "Модификатор набора кубиков сопротивления истощению",
-			"defensepool.damage_physical.mod": "Модификатор набора кубиков физической атаки",
-			"defensepool.damage_astral.mod": "Модификатор набора кубиков астральной атаки",
+			"defensepool.damage_physical.mod": "Модификатор набора кубиков сопротивления физической атаке",
+			"defensepool.damage_astral.mod": "Модификатор набора кубиков сопротивления астральной атакЕ",
 			"initiative.physical.diceMod": "Модификатор набора кубиков физической инициативы",
 			"initiative.astral.diceMod": "Модификатор набора кубиков астральной инициативы",
 			"initiative.matrix.diceMod": "Модификатор набора кубиков инициативы в Матрице",
