Add PDF book configuration (#202)

--- a/lang/en.json
+++ b/lang/en.json
@@ -17,7 +17,76 @@
     }
   },
   "PDF": {
-    "core": "Core Rulebook"
+    "books": {
+      "astral_ways": "Astral Ways",
+      "bestial_nature": "Bestial Nature",
+      "body_shop": "Body Shop",
+      "collapsing_now": "Collapsing Now",
+      "companion": "Sixth World Companion",
+      "core": "Core Rulebook",
+      "de_alpen": "Datapuls Alpen",
+      "de_berlin2080": "Berlin 2080",
+      "de_bundeswehr": "Datapuls Bundeswehr",
+      "de_feuerlaeufer": "Datapuls Feuerlaeufer",
+      "de_other": "Sonstige Quellen aus DE",
+      "de_piraten": "Datapuls Piraten der Deutschen Bucht",
+      "de_revierbericht": "Revierbericht",
+      "de_sota2081": "Datapuls SOTA2081",
+      "de_sota2082": "Datapuls SOTA2082",
+      "de_sota2083": "Datapuls SOTA2083",
+      "de_westphalen": "Datapuls Westphalen",
+      "dealers_of_death": "Dealers of Death",
+      "double_clutch": "Double Clutch",
+      "emerald": "Emerald City",
+      "firing_squad": "Firing Squad",
+      "hack_slash": "Hack & Slash",
+      "kechibi": "Kechibi Code",
+      "krime": "Krime Katalog",
+      "lofwyr": "Lofwyr's Legions",
+      "no_future": "No Future",
+      "power_plays": "Power Plays",
+      "shadow_cast": "Shadow Cast",
+      "sif_new_orleans": "New Orleans",
+      "slip_streams": "Slip Streams",
+      "smooth_operations": "Smooth Operations",
+      "street_wyrd": "Street Wyrd",
+      "tarnished_star": "Tarnished Star"
+    },
+    "code": {
+      "astral_ways": "AW",
+      "bestial_nature": "BEST",
+      "body_shop": "BS",
+      "collapsing_now": "COLL",
+      "companion": "6WC",
+      "core": "Core",
+      "de_alpen": "Alpen",
+      "de_berlin2080": "B2080",
+      "de_bundeswehr": "Bundeswehr",
+      "de_feuerlaeufer": "FEUERL",
+      "de_other": "Sonstiges DE",
+      "de_piraten": "PIR",
+      "de_revierbericht": "Revier",
+      "de_sota2081": "SOTA2081",
+      "de_sota2082": "SOTA2082",
+      "de_sota2083": "SOTA2083",
+      "de_westphalen": "Westphalen",
+      "dealers_of_death": "DD",
+      "double_clutch": "DC",
+      "emerald": "Emerald",
+      "firing_squad": "FS",
+      "hack_slash": "HnS",
+      "kechibi": "KC",
+      "krime": "KK",
+      "lofwyr": "LL",
+      "no_future": "NF",
+      "power_plays": "PP",
+      "shadow_cast": "SC",
+      "sif_new_orleans": "New Orleans",
+      "slip_streams": "SLIP",
+      "smooth_operations": "SO",
+      "street_wyrd": "WYRD",
+      "tarnished_star": "TS"
+    }
   },
   "ACTOR": {
     "TypeCritter": "Critter",
