Vehicles and Drones can now roll physical defense and soak from chat buttons

--- a/lang/en.json
+++ b/lang/en.json
@@ -739,6 +739,7 @@
 	    "onroad": "On-Road",
       "points": "Points",
       "pool": "Pool",
+      "pools": "Pools",
       "poolmod": "Pool modifier",
       "programs.short": "P",
       "progSlots": "Prog. slots",
