Add Overflow Modifier preconfigured effect Key (#226)

--- a/lang/en.json
+++ b/lang/en.json
@@ -985,6 +985,7 @@
       "stun": "Stun",
       "stun_monitor": "Stun Monitor",
       "overflow": "Overflow",
+      "overflow_monitor": "Overflow Monitor",
       "dead": "DEAD",
       "broken": "BROKEN DOWN"
     },
